# gitrs

./: Cargo.toml  KEYBINDINGS.md  LICENSE.md  README.md  TODO.txt
config/: .gitrsrc
src/: action.rs  app.rs  app_state.rs  blame_app.rs  config.rs  errors.rs  files_app.rs  git.rs  input.rs  log_app.rs  main.rs  pager_app.rs  pager_widget.rs  show_app.rs  stash_app.rs  status_app.rs  ui.rs  view_list.rs
src/model/: action.rs  app_state.rs  config.rs  errors.rs  git.rs  mod.rs
src/ui/: mod.rs  pager_widget.rs  utils.rs
src/views/: blame.rs  mod.rs  pager.rs  show.rs  stash.rs  status.rs
