[package]
name = "gitrs"
version = "0.2.2"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
syntect = "5.2.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.12"
regex = "1.11.1"
ansi-to-tui = "7.0.0"
strip-ansi-escapes = "0.2.1"
chrono = "0.4.40"
atty = "0.2.14"
